Implement create ISIN
